# x11_game_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  clean_workspace.sh
docs/: proposal.md
include/: actor.h  base_sprite.h  dynamic_actor.h  font_sprite.h  game.h  image_sprite.h  scene.h  sprite.h  static_actor.h  test.h  vector_2d.h  x_display.h  x_screen.h
src/: CMakeLists.txt  actor.cpp  base_sprite.cpp  dynamic_actor.cpp  font_sprite.cpp  game.cpp  image_sprite.cpp  scene.cpp  sprite.cpp  static_actor.cpp  test.cpp  vector_2d.cpp  x_display.cpp  x_screen.cpp
test/images/: test.xpm
test/include/: pong.h  shooter_game.h  smiley_actor.h  title_scene.h
test/src/: CMakeLists.txt  main.cpp  pong.cpp  shooter_game.cpp  smiley_actor.cpp  title_scene.cpp
